[gd_scene load_steps=2 format=3 uid="uid://d2nmodwecvyw1"]

[ext_resource type="Script" path="res://UI/Dialogs/UnsavedChangesDialog.gd" id="1"]

[node name="UnsavedChangesDialog" type="MarginContainer"]
custom_minimum_size = Vector2(450, 90)
offset_right = 450.0
offset_bottom = 90.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1")

[node name="Container" type="Control" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "UNSAVED_CHANGES_DIALOG_TEXT"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 1

[node name="SaveButton" type="Button" parent="Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVE"

[node name="DiscardButton" type="Button" parent="Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DISCARD"

[node name="CancelButton" type="Button" parent="Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CANCEL"
